2005-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Handle extra samples in scanline
	TIFFs.

2005-01-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (DescribeImage): Report statistics for a virtual
	gray channel for grayscale images rather than discrete red, green,
	and blue.
	* PerlMagick/Makefile.nt: JNG and JP2 to test list.
	* configure.ac: Changed --without-fpx to --with-fpx due to
	decision to default FlashPIX to 'no'.  FlashPIX library is not
	very portable and is only known to work properly under SPARC
	Solaris and Windows.
	* NEWS: Updated with latest news.
	* lcms: Updated to LCMS 1.14.

2005-01-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c (ReadJP2Image): Handle images in YCBCR colorspace.
	(ReadJP2Image): Retrieve and store an ICC ICM color profile if
	present.
	* PerlMagick/t/tiff/read.t: Added test for reading truecolor
	planar TIFF image.
	Added test for reading 32-bit TrueColor TIFF image.
	Added test for reading 32-bit grayscale TIFF image.
	* coders/tiff.c (ReadTIFFImage): Fixed stripped TIFF reader.

2005-01-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Only set TIFFTAG_PREDICTOR to 2
	for bits-per-sample values that libtiff supports.

2004-12-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (DescribeImage): Add normalized channel statistics
	to output.
	* NEWS: Updated with changes since July.
	* magick/constitute.c (ImportImagePixelArea): For GrayQuantum,
	GrayInvertedQuantum, GrayAlphaQuantum, and
	GrayInvertedAlphaQuantum, observe image storage_class so that a
	gray DirectClass image may be created.
	* coders/tiff.c (ReadTIFFImage): Fix overflow when computing
	colormap size for bits-per-sample of 32.
	(WriteTIFFImage): Support writing 32-bit RGB(A) for
	QuantumDepth=32 build.
	(ReadTIFFImage): Support reading 32-bit RGB(A) for QuantumDepth=32