@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.2"
-#define public MagickPackageVersionAddendum ".020050113"
+#define public MagickPackageVersionAddendum ".020050114"
 #define public MagickPackageReleaseDate "unreleased"
