@@ -1,3 +1,9 @@
+2005-01-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* win2k/IMDisplay/IMDisplayDoc.cpp (DoReadImage): Ensure that image
+	is in RGB color space after being read since this is what Windows
+	expects.
+
 2005-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/tiff.c (ReadTIFFImage): Handle extra samples in scanline
